# anchor-pda-contract-integration

./: .gitignore  Anchor.toml
app/client/: package.json
app/client/src/: App.tsx  Idl.json  Test.tsx  index.css  index.tsx
app/client/src/common/: constants.ts  index.ts
app/client/src/test/: instructions.test.ts  mocks.ts
programs/test_pda_fpa/: Cargo.toml
programs/test_pda_fpa/src/: lib.rs
tests/: test_pda_fpa.ts
